[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/GUI/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/themes/default.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/GUI/SettingsMenu/SettingsMenu.tscn" type="PackedScene" id=3]

[node name="PauseMenu" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -292, -35 )
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.243137 )

[node name="vbox" type="VBoxContainer" parent="."]
anchor_left = 0.45
anchor_right = 0.55
anchor_bottom = 1.0
margin_left = -32.0
margin_right = 32.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 20
alignment = 1

[node name="StatusLabel" type="Label" parent="vbox"]
margin_top = 183.0
margin_right = 166.0
margin_bottom = 209.0
text = "PAUSED"
align = 1
valign = 1
uppercase = true

[node name="resume" type="Button" parent="vbox"]
margin_top = 229.0
margin_right = 166.0
margin_bottom = 261.0
text = "Resume"

[node name="restart" type="Button" parent="vbox"]
margin_top = 281.0
margin_right = 166.0
margin_bottom = 313.0
text = "Restart"

[node name="settings" type="Button" parent="vbox"]
margin_top = 333.0
margin_right = 166.0
margin_bottom = 365.0
text = "Settings"

[node name="exit" type="Button" parent="vbox"]
margin_top = 385.0
margin_right = 166.0
margin_bottom = 417.0
text = "Exit"

[node name="SettingsMenu" parent="." instance=ExtResource( 3 )]

[connection signal="button_up" from="vbox/resume" to="." method="_on_resume_button_up"]
[connection signal="button_up" from="vbox/restart" to="." method="_on_restart_button_up"]
[connection signal="button_up" from="vbox/settings" to="." method="_on_settings_button_up"]
[connection signal="button_up" from="vbox/exit" to="." method="_on_exit_button_up"]
